# memes

./: .env.example  .gitignore  Makefile  docker-compose.dev.yaml
backend/memes_service/: Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/memes_service/src/: main.py
backend/memes_service/src/config/: __init__.py  settings.py
backend/memes_service/src/domain/memes/: __init__.py  models.py  repository.py
backend/memes_service/src/infrastructure/application/: __init__.py  factory.py
backend/memes_service/src/infrastructure/database/: __init__.py  repository.py  session.py  tables.py
backend/memes_service/src/infrastructure/database/migrations/: env.py
backend/memes_service/src/infrastructure/storage/: client.py
backend/memes_service/src/presentation/api/v1/: __init__.py  memes.py
nginx/: default.conf  nginx.conf
nginx/dev/: nginx.conf
