[tool.poetry]
name = "memes-service"
version = "0.1.0"
description = ""
authors = ["maksimzhohov <zhohovmaksim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
minio = "^7.2.7"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
